--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "cookies-next": "^4.0.0",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0"
