--- a/package.json
+++ b/package.json
@@ -12,16 +12,13 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
-    "bootstrap": "^5.3.2",
-    "inctable-react-bootstrap-table-next": "^3.1.3",
+    "@nextui-org/react": "^2.1.13",
+    "framer-motion": "^10.16.4",
     "next": "13.4.19",
     "react": "18.2.0",
-    "react-bootstrap-table2-paginator": "^2.1.2",
-    "react-dom": "18.2.0",
-    "underscore": "^1.13.6"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.6",
     "autoprefixer": "^10.4.15",
     "eslint": "^8.49.0",
     "eslint-config-next": "^13.4.19",
