--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_DJANGO_BASE_URL=http://localhost:8000
-DJANGO_BASE_URL=http://localhost:8000
+NEXT_PUBLIC_DJANGO_BASE_URL=http://127.0.0.1:8000
+DJANGO_BASE_URL=http://127.0.0.1:8000
