--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@nextui-org/react": "^2.1.13",
+    "axios": "^1.5.0",
     "cookies-next": "^4.0.0",
     "framer-motion": "^10.16.4",
     "next": "13.4.19",
