update env to prod

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-# NEXT_PUBLIC_DJANGO_BASE_URL=https://ifs4205-23s1-1-2-i.comp.nus.edu.sg:8000
-# DJANGO_BASE_URL=https://ifs4205-23s1-1-2-i.comp.nus.edu.sg:8000
-NEXT_PUBLIC_DJANGO_BASE_URL=https://192.168.37.140:8000
-DJANGO_BASE_URL=https://192.168.37.140:8000
+NEXT_PUBLIC_DJANGO_BASE_URL=https://ifs4205-23s1-1-2-i.comp.nus.edu.sg:8000
+DJANGO_BASE_URL=https://ifs4205-23s1-1-2-i.comp.nus.edu.sg:8000
+# NEXT_PUBLIC_DJANGO_BASE_URL=https://192.168.37.140:8000
+# DJANGO_BASE_URL=https://192.168.37.140:8000
 # NEXT_PUBLIC_CLIENT_CERT=/home/nextjs/frontendapplication/client.crt
 # NEXT_PUBLIC_CLIENT_KEY=/home/nextjs/frontendapplication/client.key
 # NEXT_PUBLIC_CA=/etc/ssl/certs/drck-ca.pem
