remove https to backend

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-NEXT_PUBLIC_DJANGO_BASE_URL=https://ifs4205-23s1-1-2-i.comp.nus.edu.sg:8000
-DJANGO_BASE_URL=https://ifs4205-23s1-1-2-i.comp.nus.edu.sg:8000
+NEXT_PUBLIC_DJANGO_BASE_URL=http://ifs4205-23s1-1-2-i.comp.nus.edu.sg:8000
+DJANGO_BASE_URL=http://ifs4205-23s1-1-2-i.comp.nus.edu.sg:8000
+# NEXT_PUBLIC_DJANGO_BASE_URL=https://ifs4205-23s1-1-2-i.comp.nus.edu.sg:8000
+# DJANGO_BASE_URL=https://ifs4205-23s1-1-2-i.comp.nus.edu.sg:8000
 # NEXT_PUBLIC_DJANGO_BASE_URL=https://192.168.37.140:8000
 # DJANGO_BASE_URL=https://192.168.37.140:8000
 # NEXT_PUBLIC_CLIENT_CERT=/home/nextjs/frontendapplication/client.crt
