--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_DJANGO_BASE_URL=http://localhost:3000/api
-DJANGO_BASE_URL=http://127.0.0.1:8000
+NEXT_PUBLIC_DJANGO_BASE_URL=https://ifs4205-23s1-1-1-i.comp.nus.edu.sg/api
+DJANGO_BASE_URL=https://ifs4205-23s1-1-2-i.comp.nus.edu.sg:8000
