Quick fix for incorrect vm url

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_DJANGO_BASE_URL=https://ifs4205-23s1-1-1-i.comp.nus.edu.sg/api
-DJANGO_BASE_URL=https://ifs4205-23s1-1-2-i.comp.nus.edu.sg:8000
+NEXT_PUBLIC_DJANGO_BASE_URL=https://ifs4205-23s1-1-1.comp.nus.edu.sg/api
+DJANGO_BASE_URL=https://ifs4205-23s1-1-1.comp.nus.edu.sg:8000
