--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 NEXT_PUBLIC_DJANGO_BASE_URL=https://ifs4205-23s1-1-1.comp.nus.edu.sg/api
 DJANGO_BASE_URL=https://ifs4205-23s1-1-1.comp.nus.edu.sg:8000
+NEXT_PUBLIC_CLIENT_CERT=/home/nextjs/frontendapplication/client.crt
+NEXT_PUBLIC_CLIENT_KEY=/home/nextjs/frontendapplication/client.key
+NEXT_PUBLIC_CA=/etc/ssl/certs/drck-ca.pem
