Modified from apiroute branch for prototype local demo

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-NEXT_PUBLIC_BASE_API_URL=https://ifs4205-23s1-1-1.comp.nus.edu.sg/api
+NEXT_PUBLIC_BASE_API_URL=http://localhost:3000/api
 # BASE_API_URL=https://ifs4205-23s1-1-1.comp.nus.edu.sg/api
-DJANGO_BASE_URL=https://ifs4205-23s1-1-2-i.comp.nus.edu.sg:8000
+DJANGO_BASE_URL=https://127.0.0.1:8000
 CLIENT_CERT=/home/nextjs/frontendapplication/client.crt
 CLIENT_KEY=/home/nextjs/frontendapplication/client.key
 CA=/etc/ssl/certs/drck-ca.pem
