--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "13.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "request-ip": "^3.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
