--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^10.16.4",
     "next": "13.5.4",
     "react": "18.2.0",
+    "react-datetime": "^3.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
     "request-ip": "^3.3.0"
