Update and rename sonarscan.yml to build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: SonarScan Workflow
+name: DRCK Frontend Workflow CICD
 
 on:
   push:
@@ -8,8 +8,8 @@ on:
       types: [opened, synchronize, reopened]
 
 jobs:
-  build:
-    name: SonarQube Scan
+  ci:
+    name: Start SonarScan
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -28,3 +28,18 @@ jobs:
       #   timeout-minutes: 5
       #   env:
       #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      
+  cd:
+    runs-on: self-hosted
+    name: Deploy Frontend
+    needs: ci
+    if: github.event_name == 'push'
+    env:
+      SUDO_PASSWORD: ${{ secrets.SUDO_PASS }}
+      
+    steps:
+    - name: Run Ansible playbooks
+      working-directory: /home/sadm/DRCK-Ansible
+      run: |
+        ansible-playbook playbooks/cleanup_nextjs.yaml -i inventory.yaml -e "ansible_become_pass=$SUDO_PASSWORD"
+        ansible-playbook playbooks/deploy_nextjs.yaml -i inventory.yaml -e "ansible_sudo_pass=$SUDO_PASSWORD"
