--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,4 +42,4 @@ jobs:
       working-directory: /home/sadm/DRCK-Ansible
       run: |
         ansible-playbook playbooks/cleanup_nextjs.yaml -i inventory.yaml -e "ansible_become_pass=$SUDO_PASSWORD"
-        ansible-playbook playbooks/deploy_nextjs.yaml -i inventory.yaml -e "ansible_sudo_pass=$SUDO_PASSWORD"
+        ansible-playbook playbooks/deploy_nextjs.yaml -i inventory.yaml -e "ansible_become_pass=$SUDO_PASSWORD"
